--- a/ped_count.css
+++ b/ped_count.css
@@ -29,7 +29,26 @@
     font-size: 15px;
 }
 
-.tooltip {
+#tooltip {
+    position: absolute;
+    width: auto;
+    height: auto;
+    border: 1px;
+    background-color: white;
+    pointer-events: none;
+    opacity: 0.9;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+#tooltip p {
+    margin: 0;
     font-family: sans-serif;
     font-size: 13px;
+    line-height: 20px;
+}
+
+#tooltip.hidden {
+    display: none;
 }
