--- a/ped_count.css
+++ b/ped_count.css
@@ -7,26 +7,24 @@
     stroke-width: 3;
 }
 
-.datapoint.weekday {
+.weekday {
     fill: #1b9e77;
 }
 
-.datapoint.weekend {
+.weekend {
     fill: #d95f02;
 }
 
-.line.weekday {
+.weekday.line {
+    fill: none;
+    stroke-width: 3;
     stroke: #1b9e77;
 }
 
-.line.weekend {
+.weekend.line {
+    fill: none;
+    stroke-width: 3;
     stroke: #d95f02;
-}
-
-.annotation {
-    background-color: none;
-    font-family: sans-serif;
-    font-size: 15px;
 }
 
 #tooltip {
@@ -51,4 +49,20 @@
 
 #tooltip.hidden {
     display: none;
+}
+
+.annotation {
+    background-color: none;
+    font-family: sans-serif;
+    font-size: 15px;
+}
+
+.annotation.blink {
+    animation: blink 5s linear infinite;
+}
+
+@keyframes blink{
+0%{opacity: 0;}
+20%{opacity: .8;}
+50%{opacity: 1;}
 }
