--- a/ped_count.css
+++ b/ped_count.css
@@ -61,3 +61,26 @@
 20%{opacity: .8;}
 50%{opacity: 1;}
 }
+
+#finding {
+    position: absolute;
+    width: 250px;
+    height: auto;
+    border: none;
+    background-color: white;
+    pointer-events: none;
+    opacity: 1;
+    border-style: none;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+#finding p {
+    background-color: none;
+    font-family: sans-serif;
+    font-size: 15px;
+}
+
+#finding.hidden {
+    display: none;
+}
